added submit logic and checkbox quiz

--- a/app/components/radio-button.hbs
+++ b/app/components/radio-button.hbs
@@ -4,7 +4,8 @@
     name={{@name}}
     value={{@value}}
     checked={{@selected}}
-    {{on "change" (fn @onChange)}}
+    {{on "change" @onChange}}
   />
   {{yield}}
+  
 </label>
