--- a/app/components/button.hbs
+++ b/app/components/button.hbs
@@ -1,3 +1,7 @@
-<button class="button" type="button" {{on "click" (fn @onClick)}}>
+<button class="button submitBtn" type="button" {{on "click" @onClick}} disabled={{@isLoading}} isLoadin={{@isLoading}}>
+  {{#if @isLoading}} 
+    <span class="loader"></span>
+  {{/if}}
+  
   {{yield}}
 </button>
