--- a/app/components/multiple-option-question.hbs
+++ b/app/components/multiple-option-question.hbs
@@ -1,21 +1,21 @@
-<h4>{{@title}}</h4>
-
-{{#each @options as |option|}}
-    <div class="option">
-    <Checkbox 
-        @name="secondQuestion" 
-        @value={{option.label}}
-        @isChecked={{get-user-prop @userAnswers option.question}} 
-        @toggleCheckbox={{fn @updateQuestion option.label option.type option.question}}>
-            {{option.label}}
-    </Checkbox>
-
-    {{#if @result}}
-        {{#let (get-user-prop @result option.question 'userAnswers') as |userAnswer|}}
-            {{#if (includes userAnswer option.label)}}
-            <span>{{get-user-prop @result option.question 'isCorrect' option.label}}</span>
-            {{/if}}
-        {{/let}}
-    {{/if}}
-    </div>
-{{/each}}  
+<div class="question">
+    <h2>{{@title}}</h2>
+    {{#each @options as |option|}}
+        <div class="option">
+            <Checkbox 
+                @name="secondQuestion" 
+                @value={{option.label}}
+                @isChecked={{get-obj-prop @userAnswers option.question}} 
+                @toggleCheckbox={{fn @updateQuestion option.label option.type option.question}}>
+                    {{option.label}}
+                     {{#if @result}}
+                        {{#let (get-obj-prop @result option.question 'userAnswers') as |userAnswer|}}
+                            {{#if (includes userAnswer option.label)}}
+                                <span class="correctness">{{get-obj-prop @result option.question 'isCorrect' option.label}}</span>
+                            {{/if}}
+                        {{/let}}
+                    {{/if}}
+            </Checkbox>
+        </div>
+    {{/each}}  
+</div>
