--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,29 +5,72 @@
 
 body {
   margin: 0;
-  font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
-  line-height: 1.5;
+  font-family: 'Segoe UI', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 40px;
+  background-color: #121212;
+  color: #fff;
+}
+
+
+/* h2 {
+  font-size: 18px;
+} */
+
+h1 {
+    text-align: center;
+    color: #bb86fc;
+    margin-bottom: 30px;
 }
 
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
+    max-width: 700px;
+    width: 100%;
+    background-color: #1e1e1e;
+    padding: 30px;
+    border-radius: 16px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+
+    overflow: auto;
+    max-height: calc(100vh - 140px);
+    scrollbar-color: #888 #414141;
 }
 
 .option {
-  padding: 12px;
-  display: flex;
+    display: flex;
+    width: 100%;
+    background-color: #292929;
+    border-radius: 8px;
+    margin-bottom: 8px;
+    cursor: pointer;
+    border: 1px solid #333;
+    transition: background-color 0.2s;
+
+    &:hover {
+      background-color: #333333;
+    }
 }
 
+.correctness {
+    position: relative;
+    margin-left: 15px;;
+}
+
+.option label{
+    flex: 1;
+    padding: 10px;
+}
+
+.question {
+  margin-bottom: 25px;
+}
 
 .button {
-  background-color: #47b54b;
+  background-color: #bb86fc;
   text-align: center;
-  margin-top: 20px;
   padding: 10px;
   border-radius: 5px;
   border: none;
@@ -35,9 +78,10 @@ body {
   color: #fff;
   box-shadow: 1px 0 7px rgb(0 0 0 / 20%);
   transition: all 0.3s ease;
+  font-size: 18px;
 
   &:hover {
-    background-color: #3a9b3f;
+    background-color: #9971c9;
     transition: all 0.3s ease;
   }
 
@@ -64,7 +108,6 @@ body {
 input[type="radio"],
 input[type="checkbox"] {
   /* Add if not using autoprefixer */
-  appearance: none;
 
   /* Remove most all native input styles */
   appearance: none;
@@ -78,13 +121,13 @@ input[type="checkbox"] {
   color: currentcolor;
   width: 1.15em;
   height: 1.15em;
-  border: 0.1em solid #3b3939;
+  border: 0.1em solid #ffffff5e;
   border-radius: 50%;
-  transform: translateY(-0.075em);
+  /* transform: translateY(-0.075em); */
   display: grid;
   place-content: center;
   cursor: pointer;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 input[type="checkbox"] {
@@ -97,10 +140,10 @@ input[type="checkbox"]::before {
   width: 0.65em;
   height: 0.65em;
   transform: scale(0);
-  transition: 120ms transform ease-in-out;
+  transition: 100ms transform ease-in-out;
 
   /* Windows High Contrast Mode */
-  background-color: #3a9b3f;
+  background-color: #bb86fc;
 }
 
 input[type="radio"]::before {
@@ -117,9 +160,10 @@ input[type="checkbox"]:checked::before {
   transform: scale(1);
 }
 
-input[type="radio"]:focus,
-input[type="checkbox"]:focus {
-  box-shadow: 0 0 4px rgb(0 0 0 / 90%);
+input[type="radio"]:hover,
+input[type="checkbox"]:hover {
+  box-shadow: 0 0 4px rgb(255 255 255 / 90%);
+  transition: all 0.5s ease;
 }
 
 .loader {
@@ -133,9 +177,83 @@ input[type="checkbox"]:focus {
   animation: l13 1s infinite linear;
   position: absolute;
   left: 7px;
-  top: 7px;
+  top: 10px;
 }
 
 @keyframes l13{ 
   100%{transform: rotate(1turn)}
+}
+
+.link-btn {
+  /* text-decoration: none; */
+  color: #fff;
+  font-size: 16px;
+  line-height: 0.7;
+  transition: all 0.3s ease;
+
+  &:hover {
+    color: rgb(255 255 255 /70%);
+    transition: all 0.3s ease;
+  }
+}
+
+.footer-btns {
+  display: flex;
+  gap: 15px;
+  margin-top: 20px;
+  align-items: center;
+}
+
+.history-item {
+  position: relative;
+  margin-bottom: 35px
+}
+
+.history-question {
+  position: relative;
+  margin-bottom: 30px;
+  
+  &::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: rgb(101 101 101 / 60%);
+    bottom: -15px;
+  }
+
+  &:last-child::after {
+    display: none;
+  }
+}
+
+.question-view {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  line-height: 1;
+
+  .left-column {
+    font-weight: 500;
+  }
+}
+
+.center {
+  text-align: center;;
+}
+
+.back-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.history-header {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 15px;
+}
+
+.no-margin {
+  margin: 0;
 }
